# Screen-capture

./: CMakeLists.txt  Devices.cpp  Devices.h  Info sul funzionamento  README.md  ScreenCaptureInterface.cpp  ScreenCaptureInterface.h  ScreenRecorder.cpp  ScreenRecorder.h  main.cpp  main.h
